[gd_scene load_steps=13 format=3 uid="uid://b1i3pker8xmri"]

[ext_resource type="Script" path="res://Character/player_entity.gd" id="1_wsbxo"]
[ext_resource type="Texture2D" uid="uid://ure1hhsgw8ny" path="res://Art/Make a Boss/Character/robo_walk.png" id="2_mbfq5"]
[ext_resource type="Script" path="res://health_component.gd" id="3_iruva"]
[ext_resource type="Script" path="res://hitbox_component.gd" id="4_hl1st"]
[ext_resource type="Script" path="res://Components/weapon_equipment_component.gd" id="5_ws5v7"]
[ext_resource type="PackedScene" uid="uid://ggquigor1eso" path="res://Weapon/base_weapon_component.tscn" id="6_dqjjs"]
[ext_resource type="Script" path="res://movement_component.gd" id="7_y7apb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4myvi"]
size = Vector2(13, 23)

[sub_resource type="Animation" id="Animation_yoihg"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_uq21j"]
resource_name = "run"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2gxvm"]
_data = {
"idle": SubResource("Animation_yoihg"),
"run": SubResource("Animation_uq21j")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a3aic"]
size = Vector2(13, 16)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 4
collision_mask = 12
script = ExtResource("1_wsbxo")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2.38419e-07, 8)
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_mbfq5")
hframes = 5

[node name="PhysicsCollisonShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 7.5)
shape = SubResource("RectangleShape2D_4myvi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2gxvm")
}

[node name="Timer" type="Timer" parent="."]

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_iruva")

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32
script = ExtResource("4_hl1st")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(-0.5, 7)
shape = SubResource("RectangleShape2D_a3aic")

[node name="WeaponEquipmentComponent" type="Node2D" parent="." node_paths=PackedStringArray("equipped_weapons")]
position = Vector2(0, 8)
script = ExtResource("5_ws5v7")
equipped_weapons = [NodePath("BaseWeaponComponent")]

[node name="BaseWeaponComponent" parent="WeaponEquipmentComponent" instance=ExtResource("6_dqjjs")]
position = Vector2(-3, -3)

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("7_y7apb")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_shape_entered" from="HitboxComponent" to="HitboxComponent" method="_on_area_shape_entered"]
[connection signal="body_entered" from="HitboxComponent" to="HitboxComponent" method="_on_body_entered"]
